# mouse-polling-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  ui.rs
src/input/: windows.rs
